--- a/pagoda_closeread.qmd
+++ b/pagoda_closeread.qmd
@@ -1,34 +1,103 @@
 ---
-title: "Personalised recovery and resilience kit for individuals with Bipolar Disorder: A metaphorical approach"
-format: closeread-html
+title: "Pagoda Metaphor"
+format: 
+  closeread-html:
+    remove-header-space: true
+    cr-style:
+      section-background-color: "#d6ddb9"
+    css: 
+      - styles.css
+      - readability.css
 ---
 
-:::: cr-section
-People with Bipolar Disorder (BD) face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, and financial recklessness.
+::: cr-section
 
-These behaviours often mirror the sudden and powerful impact of natural disasters like earthquakes, leaving individuals and their families dealing with severe consequences, such as legal issues, mental health crises, and strained relationships. @cr-image1
+**Central Pillar (Shinbashira) = Core Values and Self-Identity**
+
+:::{focus-on="cr-image1"}
+
+*Ancient Buildings*: The central pillar (shinbashira) in pagodas acts as a stabilising "spine," helping the structure distribute seismic forces and maintain balance. 
+
+*Human Experience*: A strong sense of core values, personal identity, or self-understanding can serve as the central "pillar" in a person’s life, grounding them even when mood fluctuations shake their emotional landscape. Just like the central pillar supports the building, an individual’s self-awareness and deeply held values can provide stability during manic episodes, preventing total collapse into harmful behaviours. 
+:::
 
 ::: {#cr-image1}
-![](Japanese-style_painting.png)
+![](images/gpagoda1-01.png)
 :::
-::::
+:::
 
-:::: cr-section
-We are embarked on developing a personalised recovery and resilience kit, co-designed with stakeholders and guided by the metaphor of earthquake-resistant Japanese pagoda architecture.
+::: cr-section
 
-Just as a pagoda withstands earthquakes through its flexible yet strong design, this kit will offer adaptable, layered support to enhance recovery and resilience in individuals with BD. @cr-image2
+Take a minute to reflect on thsee questions. @cr-questions1
+
+| {#cr-questions1 .scale-to-fill}
+| Add question 1 here?
+| Add question 2 here?
+| Add question 3 here?
+
+:::
+
+::: cr-section
+**Joint Construction without Nails = Healthy Relationships**
+
+:::{focus-on="cr-image2"}
+
+*Ancient Buildings*: The joints in ancient wooden buildings are designed to be flexible, allowing the building to move and sway without snapping or breaking. This flexibility is crucial for absorbing seismic shocks. 
+
+*Human Experience*: Healthy, flexible relationships that allow for emotional movement and adaptation without rigid expectations can absorb the shocks of mood episodes. Supportive relationships can bend, adjust, and accommodate mood fluctuations without breaking under the strain. These relationships, like family or close friends, provide support while giving space for individual emotional experience.
+:::
 
 ::: {#cr-image2}
-![](x-ray_pagoda.png)
+![](images/gpagoda2-01.png)
 :::
-::::
+:::
 
-:::: cr-section
-The metaphor of a traditional Japanese pagoda provides a structural and philosophical framework for developing a personalised kit to help individuals with BD.
+::: cr-section
+Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
 
-Pagodas are built to withstand earthquakes through a combination of flexibility and strength, specifically using features like the shinbashira (a central pillar) and interlocking wooden joints. These architectural elements are designed to absorb shocks and maintain stability during crises—an ideal metaphor for the personalised kit that we propose for individuals with BD. @cr-image3
+::: {#cr-questions2}
+1. Question 1
+2. Question 2
+3. Question 3
+:::
+:::
+
+::: cr-section
+**Multi-Tiered Roofs = Social Support, Layered Resources and Crisis Prevention**
+
+*Ancient Buildings*: The multi-tiered roofs in pagodas help distribute the forces of an earthquake, acting like shock absorbers that slow down and spread out the shaking. *Human Experience*: Layered social support systems—including family, friends, healthcare professionals, and community resources—act like the multiple layers of a roof. Each layer provides an additional buffer, spreading out emotional shocks and offering safety nets that can slow down the escalation of risky behaviours. These layers work together to ensure that no single source of support bears the entire load. @cr-image3
 
 ::: {#cr-image3}
-![](x-ray_joints.png)
+![](images/pagoda3-01.png)
 :::
-::::
+:::
+
+::: cr-section
+**Symmetrical and Simple Design = Balanced Lifestyle**
+
+*Ancient Buildings*: The symmetrical and simple designs of ancient buildings help distribute stress evenly during an earthquake, reducing the concentration of forces on any one part of the structure. *Human Experience*: A balanced lifestyle—including time for self-care, work, social engagement, and rest—helps distribute the "emotional load" of life evenly, preventing any one aspect of life from becoming too overwhelming. This balance ensures that even during stressful periods, a person isn’t overwhelmed by any single area (e.g., work stress or relationship issues), reducing the risk of extreme reactions during mood episodes. @cr-image4
+
+::: {#cr-image4}
+![](images/gpagoda4-01.png)
+:::
+:::
+
+::: cr-section
+**Flexible Wooden Structure = Emotional Adaptability and Coping Skills**
+
+*Ancient Buildings*: The flexible wooden structure of Japanese buildings allows them to bend and absorb energy without breaking under stress. *Human Experience*: Emotional adaptability and well-developed coping skills (e.g., mindfulness, emotional regulation techniques, therapy) function in a similar way, allowing a person to "bend" with emotional highs and lows without breaking down. These coping skills help an individual manage mood swings in a healthy way, reducing the impact of manic episodes. @cr-image5
+
+::: {#cr-image5}
+![](images/gpagoda5.png)
+:::
+:::
+
+::: cr-section
+**Base Isolation (Floating Foundations) = Grounded Daily Routine and Stability**
+
+*Ancient Buildings*: In some ancient structures, the foundation stones allow the building to "float" above the ground, moving slightly with the earthquake rather than fighting against it. This helps absorb the shock and prevent the structure from crumbling. *Human Experience*: A grounded daily routine—including regular sleep, consistent medication, and structured activities—acts like a floating foundation. It gives individuals a stable base from which they can handle mood swings. Routine can absorb the shocks of mood changes and prevent escalation, offering a predictable structure that remains steady even during emotional upheavals. @cr-image6
+
+::: {#cr-image6}
+![](images/gpagoda6.png)
+:::
+:::
