--- a/pagoda_closeread.qmd
+++ b/pagoda_closeread.qmd
@@ -17,7 +17,7 @@ Below you will find a visual and written description of the pagoda as a metaphor
 
 ::: cr-section
 
-<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+<span style="color:#264653; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
 Central Pillar <br> 
 (Shinbashira)  <br> 
 <br>
@@ -51,7 +51,7 @@ Take one minute to reflect on these questions. @cr-questions1]{highlight="1,3"}
 :::
 
 ::: cr-section
-<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+<span style="color:#264653; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
 Joint Construction <br> 
 Without Nails  <br> 
 <br>
@@ -79,20 +79,27 @@ Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
 1.	Who are the key people in your life who provide support, and how do they help you during challenging times?
 2.	How do you maintain healthy boundaries in relationships while adapting to new social environments?
 3.	What strategies can you use to build new supportive connections while keeping existing relationships strong?
+
 :::
 :::
 
+
 ::: cr-section
-<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+<span style="color:#264653; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
 Multi-Tiered Roofs <br> 
 <br> 
 Social Support, <br>
 Layered Resources <br>
 and Crisis Prevention</strong></span>
 
-*Ancient Buildings*: The multi-tiered roofs in pagodas help distribute the forces of an earthquake, acting like shock absorbers that slow down and spread out the shaking. 
+:::{focus-on="cr-image3"}
+
+*Ancient Buildings*: The multi-tiered roofs in pagodas help distribute the forces of an earthquake, acting like shock absorbers that slow down and spread out the shaking.
+
 <br>
-*Human Experience*: Layered social support systems—including family, friends, healthcare professionals, and community resources—act like the multiple layers of a roof. Each layer provides an additional buffer, spreading out emotional shocks and offering safety nets that can slow down the escalation of risky behaviours. These layers work together to ensure that no single source of support bears the entire load. @cr-image3
+
+*Human Experience*: Layered social support systems—including family, friends, healthcare professionals, and community resources—act like the multiple layers of a roof. Each layer provides an additional buffer, spreading out emotional shocks and offering safety nets that can slow down the escalation of risky behaviours. These layers work together to ensure that no single source of support bears the entire load. 
+:::
 
 ::: {#cr-image3}
 ![](images/pagoda3-01.png)
@@ -110,15 +117,20 @@ Take one minute to reflect on these questions. @cr-questions3]{highlight="1,3"}
 :::
 
 ::: cr-section
-<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+<span style="color:#264653; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
 Symmetrical and <br> 
 Simple Design <br>
 <br>
 Balanced Lifestyle</strong></span>
 
-*Ancient Buildings*: The symmetrical and simple designs of ancient buildings help distribute stress evenly during an earthquake, reducing the concentration of forces on any one part of the structure. 
+:::{focus-on="cr-image4"}
+
+*Ancient Buildings*: The symmetrical and simple designs of ancient buildings help distribute stress evenly during an earthquake, reducing the concentration of forces on any one part of the structure.
+
 <br>
-*Human Experience*: A balanced lifestyle—including time for self-care, work, social engagement, and rest—helps distribute the "emotional load" of life evenly, preventing any one aspect of life from becoming too overwhelming. This balance ensures that even during stressful periods, a person isn’t overwhelmed by any single area (e.g., work stress or relationship issues), reducing the risk of extreme reactions during mood episodes. @cr-image4
+
+*Human Experience*: A balanced lifestyle—including time for self-care, work, social engagement, and rest—helps distribute the "emotional load" of life evenly, preventing any one aspect of life from becoming too overwhelming. This balance ensures that even during stressful periods, a person isn’t overwhelmed by any single area (e.g., work stress or relationship issues), reducing the risk of extreme reactions during mood episodes.
+:::
 
 ::: {#cr-image4}
 ![](images/gpagoda4-01.png)
@@ -136,16 +148,21 @@ Take one minute to reflect on these questions. @cr-questions4]{highlight="1,3"}
 :::
 
 ::: cr-section
-<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+<span style="color:#264653; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
 Flexible Wooden <br> 
 Structure <br>
 <br>
 Emotional Adapability and<br>
 Coping Skills</strong></span>
 
-*Ancient Buildings*: The flexible wooden structure of Japanese buildings allows them to bend and absorb energy without breaking under stress. 
+:::{focus-on="cr-image5"}
+
+*Ancient Buildings*: The flexible wooden structure of Japanese buildings allows them to bend and absorb energy without breaking under stress.
+
 <br>
-*Human Experience*: Emotional adaptability and well-developed coping skills (e.g., mindfulness, emotional regulation techniques, therapy) function in a similar way, allowing a person to "bend" with emotional highs and lows without breaking down. These coping skills help an individual manage mood swings in a healthy way, reducing the impact of manic episodes. @cr-image5
+
+*Human Experience*: Emotional adaptability and well-developed coping skills (e.g., mindfulness, emotional regulation techniques, therapy) function in a similar way, allowing a person to "bend" with emotional highs and lows without breaking down. These coping skills help an individual manage mood swings in a healthy way, reducing the impact of manic episodes. 
+:::
 
 ::: {#cr-image5}
 ![](images/ggpagoda5.png)
@@ -163,16 +180,21 @@ Take one minute to reflect on these questions. @cr-questions5]{highlight="1,3"}
 :::
 
 ::: cr-section
-<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+<span style="color:#264653; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
 Base Isolation <br> 
 (Floating Foundations) <br>
 <br>
 Grounded Daily <br>
 Routine and Stability </strong></span>
 
-*Ancient Buildings*: In some ancient structures, the foundation stones allow the building to "float" above the ground, moving slightly with the earthquake rather than fighting against it. This helps absorb the shock and prevent the structure from crumbling. 
+:::{focus-on="cr-image6"}
+
+*Ancient Buildings*: In some ancient structures, the foundation stones allow the building to "float" above the ground, moving slightly with the earthquake rather than fighting against it. This helps absorb the shock and prevent the structure from crumbling.
+
 <br>
-*Human Experience*: A grounded daily routine—including regular sleep, consistent medication, and structured activities—acts like a floating foundation. It gives individuals a stable base from which they can handle mood swings. Routine can absorb the shocks of mood changes and prevent escalation, offering a predictable structure that remains steady even during emotional upheavals. @cr-image6
+
+*Human Experience*: A grounded daily routine—including regular sleep, consistent medication, and structured activities—acts like a floating foundation. It gives individuals a stable base from which they can handle mood swings. Routine can absorb the shocks of mood changes and prevent escalation, offering a predictable structure that remains steady even during emotional upheavals. 
+:::
 
 ::: {#cr-image6}
 ![](images/ggpagoda6.png)
