--- a/pagoda_closeread.qmd
+++ b/pagoda_closeread.qmd
@@ -40,7 +40,8 @@ Self-Identity</strong></span>
 :::
 
 ::: cr-section
-Take one minute to reflect on these questions. @cr-questions1]{highlight="1,3"}
+
+ @cr-questions1]{highlight="1,3"}
 
 ::: {#cr-questions1}
 1.	What are three core values that are most important to you, and how do they guide your decisions?
@@ -73,7 +74,8 @@ Relationships</strong></span>
 :::
 
 ::: cr-section
-Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
+
+ @cr-questions2]{highlight="1,3"}
 
 ::: {#cr-questions2}
 1.	Who are the key people in your life who provide support, and how do they help you during challenging times?
@@ -107,7 +109,8 @@ and Crisis Prevention</strong></span>
 :::
 
 ::: cr-section
-Take one minute to reflect on these questions. @cr-questions3]{highlight="1,3"}
+
+ @cr-questions3]{highlight="1,3"}
 
 ::: {#cr-questions3}
 1.	What are the different layers of support available to you (e.g., friends, family, mental health services), and how do they help you?
@@ -138,7 +141,8 @@ Balanced Lifestyle</strong></span>
 :::
 
 ::: cr-section
-Take one minute to reflect on these questions. @cr-questions4]{highlight="1,3"}
+
+ @cr-questions4]{highlight="1,3"}
 
 ::: {#cr-questions4}
 1.	How do you currently distribute your time between work, social life, self-care, and relaxation?
@@ -170,7 +174,8 @@ Coping Skills</strong></span>
 :::
 
 ::: cr-section
-Take one minute to reflect on these questions. @cr-questions5]{highlight="1,3"}
+
+ @cr-questions5]{highlight="1,3"}
 
 ::: {#cr-questions5}
 1.	Think about a recent challenge you faced—how did you adapt, and what coping strategies helped you?
@@ -202,7 +207,8 @@ Routine and Stability </strong></span>
 :::
 
 ::: cr-section
-Take one minute to reflect on these questions. @cr-questions6]{highlight="1,3"}
+
+ @cr-questions6]{highlight="1,3"}
 
 ::: {#cr-questions6}
 1.	What routines or habits provide you with a sense of stability in your daily life?
