--- a/resources.qmd
+++ b/resources.qmd
@@ -3,7 +3,7 @@ title: "Resources - Virtual Allotment"
 editor: visual
 ---
 
-At Bipolar Risk, we're excited to introduce a unique and innovative concept -- a "phygital" collaborative space that combines the best of physical and online environments. Inspired by the concept of *community allotments and gardens*, we're creating a dynamic platform for resource exchange and community engagement: [The Personalised Recovery and Resilience Kit (PeRRK)](kit.html) Also visit the visual and written description of the [pagoda as a metaphor for mental wellness](pagoda_closeread.html).
+At Bipolar Risk, we're excited to introduce a unique and innovative concept -- a "phygital" collaborative space that combines the best of physical and online environments. Inspired by the concept of *community allotments and gardens*, we're creating a dynamic platform for resource exchange and community engagement: [The Personalised Recovery and Resilience Kit (PeRRK)](kit.html). Also, explore the visual and written depiction of the [pagoda, used here as a metaphor for mental wellness](pagoda_closeread.html).
 
 **What You Can Expect:**
 
