--- a/kit.qmd
+++ b/kit.qmd
@@ -8,7 +8,7 @@ title: "Personalised Recovery and Resilience Kit (PeRRK)"
 ---
 ------------------------------------------------------------------------
 
-People living with bipolar face significant risks of engaging in unpredictable, time-limited, yet [devastating behaviours](https://en.wikipedia.org) such as substance abuse, hypersexuality, relationship breakdown, self-harm, and financial recklessness. Current mental health support strategies focus primarily on regulating mood in order to reduce the likelihood of further risky behaviours. However, this support is often only available after people have already engaged in risky behaviours and suffered the negative consequences. We think it would be better for people to learn more about risk-taking and decision-making before they experience mood episodes. Therefore, people are more aware of what is happening to them and make better decisions that may not have the same negative outcomes. However, this is a new area of research that is still being developed.
+People living with bipolar face significant risks of engaging in unpredictable, time-limited, yet [devastating behaviours](https://en.wikipedia.org) such as substance abuse, hypersexuality, relationship breakdown, self-harm, and financial recklessness. Current mental health support strategies focus primarily on regulating mood in order to reduce the likelihood of further risky behaviours. However, this support is often only available after people have already engaged in risky behaviours and suffered the negative consequences. We think it would be better for people to learn more about risk-taking and decision-making before they experience [mood episodes](https://en.wikipedia.org). Therefore, people are more aware of what is happening to them and make better decisions that may not have the same negative outcomes. However, this is a new area of research that is still being developed.
 
 This is why we are working on the Personalised Recovery and Resilience Kit (PeRRK), a participatory approach inspired by the precision and wisdom of Japanese craftsmanship. It encapsulates the transformative potential of human-AI collaboration. You may find that Japanese [metaphors](https://en.wikipedia.org/wiki/Metaphor) work well for you, but there are alternative metaphors that will work with the structure of the kit; feel free to personalise your individual kit by creating your own personal metaphor. However, for the purpose of creating a general outline for this kit, we are using the structurally supportive and sound principles of Japanese craftmanship. Below you will find the kit, where you can click on each section to learn more about the different elements.
 
@@ -33,12 +33,12 @@ By bringing together the lived experiences of individuals with bipolar, insights
 
 ***The Earthquake Metaphor***
 
-Living with bipolar can feel like navigating a landscape prone to sudden, unpredictable earthquakes. The highs and lows, like tremors and aftershocks, can disrupt daily life and leave individuals and their support networks striving to find stability. How do we prepare for such uncertainty while fostering resilience and recovery?
+Living with bipolar can feel like navigating a landscape prone to sudden, unpredictable [earthquakes](https://en.wikipedia.org). The highs and lows, like tremors and aftershocks, can disrupt daily life and leave individuals and their support networks striving to find stability. How do we prepare for such uncertainty while fostering resilience and recovery?
 
 
 ![](images/ggpagoda6.png){width=60px style="display:block; margin-left:auto; margin-right:auto;"}
 
-By using a second metaphor, the PeRRK draws inspiration from the earthquake-resistant design of Japanese pagodas, structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles such as interlocking joints and a central pillar to absorb shocks while maintaining stability.
+By using a second metaphor, the PeRRK draws inspiration from the earthquake-resistant design of [Japanese pagodas](https://en.wikipedia.org), structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles such as interlocking joints and a central pillar to absorb shocks while maintaining stability.
 
 In the context of bipolar, the pagoda becomes a metaphor for resilience: a framework where each "tier" represents a vital aspect of well-being, from physical and emotional health to social support and coping strategies. Human insights, combined with online resources, help co-create tools that align with individual needs, building a system that adapts to life's challenges, just as the pagoda adapts to the forces of nature. To access a full description of the pagoda metaphor, [click here](pagoda_closeread.html).
 
@@ -48,7 +48,7 @@ In the context of bipolar, the pagoda becomes a metaphor for resilience: a frame
 
 ***Crafting Resilience***
 
-Resilience isn’t built overnight, it’s an ongoing process of learning, adapting, and growing. In Japanese craftsmanship, principles like *kaizen* (continuous improvement) and *wabi-sabi* (acceptance of imperfection) provide timeless wisdom that resonates deeply in mental health care.
+Resilience isn’t built overnight, it’s an ongoing process of learning, adapting, and growing. In Japanese craftsmanship, principles like [*kaizen*](https://en.wikipedia.org) (continuous improvement) and [*wabi-sabi*](https://en.wikipedia.org) (acceptance of imperfection) provide timeless wisdom that resonates deeply in mental health care.
 
 *Kaizen* teaches us to embrace incremental, steady progress rather than seeking perfection all at once. In mental health, this might mean celebrating small wins, like sticking to a daily routine or reaching out for support, as these build a foundation for long-term well-being.
 
@@ -65,7 +65,7 @@ For instance, a participant in our project described their recovery journey as a
 
 In craftsmanship, the relationship between master and apprentice is a cornerstone of learning and growth. The master imparts not just skills but also values—patience, precision, and dedication. This same principle plays a pivotal role in mental health care and our PeRRK project.
 
-Mentorship fosters collaboration and trust between individuals with bipolar, caregivers, and mental health professionals. Each brings unique expertise: lived experience, compassionate care, or clinical knowledge. Together, they co-create tools and strategies tailored to individual needs, blending wisdom from every perspective.
+[Mentorship](https://en.wikipedia.org) fosters collaboration and trust between individuals with bipolar, caregivers, and mental health professionals. Each brings unique expertise: lived experience, compassionate care, or clinical knowledge. Together, they co-create tools and strategies tailored to individual needs, blending wisdom from every perspective.
 
 For example, one participant shared how a peer worker, a fellow individual with lived experience of bipolar, helped them through challenging times. By offering practical advice and emotional support as an equal, the mentor modelled resilience and self-compassion, inspiring them to approach their own journey with greater confidence.
 
@@ -99,7 +99,7 @@ Personalisation, powered by human insights and AI, ensures that the PeRRK adapts
 
 ***Preparedness for Acute Situations***
 
-In moments of acute distress, preparedness is everything. Inspired by the principles of *mottainai* (efficiency) and *waza* (mastery through repetition), the PeRRK equips individuals with pre-prepared tools designed for quick, effective responses to mental health crises.
+In moments of acute distress, preparedness is everything. Inspired by the principles of [*mottainai*](https://en.wikipedia.org) (efficiency) and [*waza*](https://en.wikipedia.org) (mastery through repetition), the PeRRK equips individuals with pre-prepared tools designed for quick, effective responses to mental health crises.
 
 *Mottainai* teaches us to focus on what is essential—using resources purposefully to stabilise a situation without adding unnecessary burden. This translates into simple, efficient interventions like a sensory grounding exercise or a calming mantra that can be quickly accessed when emotions run high.
 
@@ -112,7 +112,7 @@ The PeRRK incorporates these principles by offering quick-access tools such as b
 ![](images/strength_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Finding Strength in Repair***
 
-Life’s challenges can leave us feeling broken, but the Japanese art of *kintsugi* reminds us that repair can lead to something even more beautiful. 
+Life’s challenges can leave us feeling broken, but the Japanese art of [*kintsugi*](https://en.wikipedia.org) reminds us that repair can lead to something even more beautiful. 
 
 *Kintsugi*, or "repair with gold," involves mending broken pottery with precious metals, highlighting the cracks rather than hiding them. The result? A unique, resilient piece that tells its story through its scars.
 
